--- a/style.css
+++ b/style.css
@@ -5,18 +5,64 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: rgba(129, 131, 134, 0.3);
+    height: 650px;
 }
 
 .main-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
     border: 2px solid blue;
+    background-color: rgb(2, 4, 25);
     width: 500px;
 }
 
-.title.logo{
+.title-logo{
+    width: 480px;
+}
+
+.logo{
+    color: blue;
+    text-align: left;
+    font-weight: bolder;
+}
+
+.display{
+    border: 1px solid blue;
+    width: 480px;
+    height: 100px;
+    background-color: rgba(34, 37, 36, 0.698);
+}
+
+.keys{
     display: flex;
-    justify-content: flex-start;
-} 
+    align-items: center;
+    justify-content: space-evenly;
+    border: 1px solid blue;
+    width: 480px;
+    height: 400px;
+    margin-bottom: 10px;
+    
+}
+
+.butt-set1{
+    border: 1px solid blue;
+    width: 368px;
+    height: 390px;
+
+}
+
+.butt-set2{
+    border: 1px solid blue;
+    width: 92px;
+    height: 390px;
+
+}
+
+
+
+
+
