Create button event listeners display and equal function

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 body{
@@ -32,7 +32,14 @@ body{
 }
 
 .display{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: blue;
+    font-size: 4rem;
+    font-weight:bold;
     border: 1px solid blue;
+    padding: 10px;
     width: 480px;
     height: 100px;
     background-color: rgba(34, 37, 36, 0.698);
@@ -51,8 +58,7 @@ body{
 
 .butt-set1{
     display: flex;
-    flex-wrap: wrap;
-    /* border: 1px solid blue; */
+    flex-wrap: wrap;    
     width: 368px;
     height: 390px;
 }
