Limit answer to 12 digits, bg color on hover and bg color of operator buttons

--- a/style.css
+++ b/style.css
@@ -105,6 +105,14 @@ body{
 
 }
 
+.butt:hover {
+    background-color: rgb(95, 95, 127);
+}
+
+.op{
+    background-color: rgb(82, 223, 82);
+}
+
 
 
 
