Add Google font Audiowide

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:"Audiowide", sans-serif;
 }
 
 body{
