--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ body{
     background-color: rgba(34, 37, 36, 0.698);
 }
 
+.wb{
+    
+    justify-content: flex-start;
+    font-size: 1rem;
+}
+
 .keys{
     display: flex;
     align-items: center;
@@ -108,6 +114,10 @@ body{
 
 .hov:hover {
     background-color: rgb(95, 95, 127);
+}
+
+#logo:hover{
+    background-color: rgb(95, 95, 127); 
 }
 
 .op{
