--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    border: 2px solid blue;
+    border: 4px outset rgb(62, 62, 64);
     background-color: rgb(2, 4, 25);
     width: 500px;
 }
@@ -50,13 +50,14 @@ body{
     
     justify-content: flex-start;
     font-size: 1rem;
+    color:  rgb(82, 223, 82);
 }
 
 .keys{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 480px;
     height: 400px;
     margin-bottom: 10px;
@@ -71,7 +72,7 @@ body{
 }
 
 .line{
-    border: 1px solid red;
+    border: 4px solid red;
     width: 2px;
     height: 390px;
 
@@ -102,7 +103,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center; 
-    border: 1px solid blue;
+    border-bottom: 2px solid black;
     border-radius: 5px;
     color: blue;
     font-size: 3rem;
